--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "module-13-challenge-orm",
+  "name": "module-14-tech-blog",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -9,10 +9,6 @@
     "watch": "nodemon server.js",
     "seed": "node seeds/index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,9 +16,13 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect-session-sequelize": "^7.1.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^7.0.2",
+    "express-session": "^1.17.3",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
+    "sequelize": "^6.1.0"
   }
 }
